--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-<body> <h1>Search bar airbnb</h1> <form class="form" action="#" method="post" data-qa="big"> <input class="input" type="search" placeholder="Try &quot;Los Angeles&quot;" data-qa="keypress"> </form> <form class="form form-small" action="#" method="post" data-qa="small"> <input class="input input-small" type="search" placeholder="Los Angeles"> </form> </body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    >
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Search bar airbnb</title>
+    <link rel="stylesheet" href="./style.css">
+  </head>
+  <body>
+    <h1>Search bar airbnb</h1>
+    
+    <form 
+      class="form"
+      action="#" 
+      method="post"
+      data-qa="big"
+    >
+      <input 
+        class="input"
+        type="search" 
+        placeholder="Try &quot;Los Angeles&quot;"
+        data-qa="keypress"
+      >
+    </form>
+   
+
+    <form 
+      class="form form-small"
+      action="#" 
+      method="post"
+      data-qa="small"
+    >
+      <input 
+        class="input input-small"
+        type="search" 
+        placeholder="Los Angeles"
+      >
+    </form>
+  </body>
+</html>
